src/components/note/Note.module.scss
@use 'sass:list';

@use '../../breakpoints';
@use '../../mixins';

$rounded-corners: 10px;

.note {
  aspect-ratio: .75/.6;
  min-width: 10.0416875em;

  margin-bottom: 1em;
  border-radius: $rounded-corners;

  transform: scale(0) translateX(0);
  transition: transform 500ms;
}

.noteOnMount {
  transform: scale(1);
}

.noteOnDestroy {
  transform: translateX(100vw);
}

.noteHeader {
  display: flex;
  justify-content: flex-end;

  height: 1.5em;

  border-top-left-radius: $rounded-corners;
  border-top-right-radius: $rounded-corners;
}

.closeButton {
  @include mixins.unstyled-button;
  @include mixins.clickable;

  font-weight: 600;

  display: inline-block;

  margin: 0 0 0 auto;
  padding-right: .5em;
}

.noteBody {
  word-break: break-word;
  white-space: pre-wrap;

  height: 100%;

  padding: .5em 1em;
  margin: 0;
}

$notesWrap: list.nth(breakpoints.$main-breakpoints, 1);
@media (min-width: $notesWrap) {
  .note {
    aspect-ratio: 1/.7;

    transform: scale(0) translateY(0);
  }

  .note:not(.note:only-child) {
    margin: 0 1em 1em 0;
  }

  .noteOnMount {
    transform: scale(1);
  }

  .noteOnDestroy {
    transform: translateY(-100vh);
  }
}

$notesSizeIncrease: list.nth(breakpoints.$main-breakpoints, 2);
@media (min-width: $notesSizeIncrease) {
  .note {
    min-width: 13.0416875em;
  }

  .note:not(.note:only-child) {
    margin: 0 2em 2em 0;
  }
}

